--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -1,39 +1,27 @@
-name: Build and Push Frontend/Backend Images
+name: Build and Push Frontend
 
 on:
   push:
     branches: [ "master" ]
+    paths:
+      - "server/frontend/**"
 
 jobs:
-  build:
+  build-frontend:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
-
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      # Frontend
-      - name: Build and Push Frontend
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: ./server/frontend
           push: true
           tags: ghcr.io/${{ github.repository }}-frontend:latest
-
-      # Backend
-      - name: Build and Push Backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./server/backend
-          push: true
-          tags: ghcr.io/${{ github.repository }}-backend:latest
